Bug 11127 - rtc-class: does not clear interrupts on device close
Summary: rtc-class: does not clear interrupts on device close
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_other
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-19 17:25 UTC by Tomas Janousek
Modified: 2008-07-31 16:01 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.26
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
proposed patch (1.37 KB, patch)
2008-07-26 08:48 UTC, Tomas Janousek
Details | Diff

Description Tomas Janousek 2008-07-19 17:25:38 UTC
rtc_dev_release, called on device close, does not clear the periodic interrupt, leaving it up to rtc drivers to clear it. Certain drivers, like rtc-sh, do it, certain don't, like rtc-cmos. David Brownell -- http://bugzilla.kernel.org/show_bug.cgi?id=11051#c9 and I think that it should be addressed in rtc-dev.c instead of individual drivers.
Comment 1 Tomas Janousek 2008-07-26 08:48:00 UTC
Created attachment 16990 [details]
proposed patch
Comment 2 Tomas Janousek 2008-07-30 09:42:02 UTC
The patch went through Andrew to Linus.

Note You need to log in before you can comment on or make changes to this bug.